corrected alignment

--- a/style.css
+++ b/style.css
@@ -891,7 +891,7 @@ textarea::placeholder {
   justify-content: center;
   width: 100%;
   padding: 60px 16px 0 16px;
- background: #c1c7d0;
+  background: #c1c7d0;
   position: fixed;
   top: 0;
   left: 0;
@@ -907,8 +907,11 @@ textarea::placeholder {
   position: fixed;
   top: 0;
   left: 0;
-  height: 80vh;
-  width: 80vw;
+  height: 98%;
+  width: 98%;
+  background: #fff;
+  border: 1px solid #dfe1e6;
+  border-radius: 16px;
 }
 
 
